<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Titles -->
    <string name="app_name">0 Soccer</string>
    <string name="main_menu_title">Okparts Soccer</string>
    <string name="main_menu_subtitle">Create Your League</string>

    <!-- Button Labels -->
    <string name="new_game_button_label">New Game</string>
    <string name="cont_game_button_label">Continue</string>
    <string name="create_button_label">Create</string>

    <!-- Options Menu Labels -->
    <string name="options_manager_name_label">Enter your name</string>
    <string name="options_menu_assoc">Create Your National Football Association</string>
    <string name="country_name_label">Country Name</string>
    <string name="country_nickname_label">Country Nickname</string>
    <string name="manager_name_hint">Manager\'s Name</string>
    
    <!-- Confirm Delete Exisitng Game -->
    <string name="confirm_delete_game_title">Confirm Delete&#8230;</string>
    <string name="confirm_delete_game_message">Would you like to delete your existing game data?</string>
    <string name="confirm_delete_game_yes">Delete</string>
    <string name="confirm_delete_game_no">No, thanks</string>
    
    <!-- New Game Build -->
    <string name="new_game_message">Building League</string>
    <string name="manager_name_error_blank">The Manager\'s Name cannot be blank.</string>
    <string name="manager_name_error_letters">The Manager\'s Name may only contain letters and spaces.</string>

    <!-- Default Values -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_game_options">NewGameOptions</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_build_game">BuildGame</string>

</resources>
