<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_menu_bg"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".NewGameOptions" >

    <!-- Main Title -->
    <TextView
        android:id="@+id/optionsMenuTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowColor="@color/black_shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/main_menu_title"
        android:layout_marginTop="10dp" />
    
    <TextView
        android:id="@+id/optionsMenuSubtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:shadowColor="@color/black_shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/main_menu_subtitle" />
    
    <!-- Manager Options -->
    <TextView
        android:id="@+id/optionsManagerNameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:shadowColor="@color/black_shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/options_manager_name_label" />
        
    <EditText
        android:id="@+id/optionsManagerName"
        android:hint="@string/manager_name_hint"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    
    <!-- Create Button -->
    <LinearLayout
        android:id="@+id/createGameBtn"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:paddingLeft="55dp"
        android:paddingBottom="5dp"
        android:background="@drawable/btn_default" >
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
	        android:textColor="@color/white"
	        android:textSize="30sp"
	        android:shadowColor="@color/black_shadow"
	        android:shadowDx="2"
	        android:shadowDy="2"
	        android:shadowRadius="3"
	        android:text="@string/create_button_label"
	        android:gravity="center"
	        android:clickable="true"
	        android:focusable="true"
			android:onClick="createGame" />
        
    </LinearLayout>

</LinearLayout>